welcome.lessons.welcome.methods.returning.MethodsReturning.scala.error
Program:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if (vuBiscuit == true){
  ^Program:16: error: type mismatch;
 found   : Unit
 required: Boolean
  if (Biscuit !=0)
  ^